--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                         Below are some of my favourite articles, or you can go to the blog page to see my most recent posts.
                     </p>
                     <div class="d-flex flex-column flex-md-row gap-3">
-                        <button class="btn btn-success my-hover-light fw-bold">
+                        <a href="#myblogs" class="btn btn-success my-hover-light fw-bold">
                             Featured Article
-                        </button>
-                        <button class="btn btn-outline-dark my-hover-success fw-bold">
+                        </a>
+                        <a href="#myblogs" class="btn btn-outline-dark my-hover-success fw-bold">
                             Most recent articles
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <div class="col-12 col-md-5 mt-5 mt-md-0 align-self-center">
@@ -97,7 +97,7 @@
                   <p class="pt-0 pt-md-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor ornare, nunc ligula scelerisque eros. Lorem ipsum dolor sit amet.
                   </p>
-                  <button class="btn btn-success px-3 py-2 fw-bold mt-0 mt-md-4 my-hover-light">Continue Reading</button>
+                  <a href="single.html" class="btn btn-success px-3 py-2 fw-bold mt-0 mt-md-4 my-hover-light">Continue Reading</a>
                 </div>
                 <div class="col-12 col-md-4">
                   <div>
@@ -121,7 +121,7 @@
                   <p class="pt-0 pt-md-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor ornare, nunc ligula scelerisque eros. Lorem ipsum dolor sit amet.
                   </p>
-                  <button class="btn btn-success px-3 py-2 fw-bold mt-0 mt-md-4 my-hover-light">Continue Reading</button>
+                  <a href="single.html" class="btn btn-success px-3 py-2 fw-bold mt-0 mt-md-4 my-hover-light">Continue Reading</a>
                 </div>
                 <div class="col-12 col-md-4">
                   <div>
@@ -145,7 +145,7 @@
                   <p class="pt-0 pt-md-4">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat, ipsum ac auctor ornare, nunc ligula scelerisque eros. Lorem ipsum dolor sit amet.
                   </p>
-                  <button class="btn btn-success px-3 py-2 fw-bold mt-0 mt-md-4 my-hover-light">Continue Reading</button>
+                  <a href="single.html" class="btn btn-success px-3 py-2 fw-bold mt-0 mt-md-4 my-hover-light">Continue Reading</a>
                 </div>
                 <div class="col-12 col-md-4">
                   <div>
