single page width fix, bottom blank space fix

--- a/single.html
+++ b/single.html
@@ -44,7 +44,7 @@
     </nav>
 
     <!-- single blog details -->
-     <div class="container">
+     <div class="container my-container">
       <h1 class="py-4 playfair-display text-success text-center text-md-start">
         Heading for the post here
       </h1>
@@ -68,7 +68,7 @@
       <p class="py-3">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed sem sodales, imperdiet nunc sed, vestibulum ligula. Nam in urna est. Integer sagittis rhoncus turpis, in sodales nisl ultrices in. Duis sit amet malesuada nisi.
       </p>
-
+      <div class="py-5"></div>
      </div>
 
     <!-- This is footer -->
