mobile navbar pushing fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- This is navbar -->
-    <nav class="navbar navbar-expand-lg bg-body p-4 sticky-top text-center" id="navBar">
+    <nav class="navbar navbar-expand-md bg-body p-4 position-fixed top-0 text-center w-100" id="navBar">
       <div class="container-lg">
         <a class="navbar-brand" href="#">
             <img src="assets/image/logo/Vector.png" alt="logo">
@@ -44,7 +44,7 @@
     </nav>
 
     <!-- This is hero section -->
-    <div class="container-fluid px-4">
+    <div class="container-fluid px-4 mt-0 mt-sm-5 pt-0 pt-sm-5">
         <div class="container my-padding-lg my-padding-sm text-center text-md-start">
             <div class="row justify-content-between">
                 <div class="col-12 col-md-5 align-self-center d-flex flex-column gap-3">
