--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           aria-controls="navbarSupportedContent"
           aria-expanded="false"
           aria-label="Toggle navigation"
+          onclick="addShadow()"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
