hero top spacing fix

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <!-- This is hero section -->
-    <div class="container-fluid px-4 mt-0 mt-sm-5 pt-0 pt-sm-5">
+    <div class="container-fluid px-4 my-pt">
         <div class="container my-padding-lg my-padding-sm text-center text-md-start">
             <div class="row justify-content-between">
                 <div class="col-12 col-md-5 align-self-center d-flex flex-column gap-3">
