--- a/single.html
+++ b/single.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- This is navbar -->
-    <nav class="navbar navbar-expand-lg bg-body p-4 sticky-top text-center" id="navBar">
+    <nav class="navbar navbar-expand-lg bg-body p-4 position-fixed top-0 text-center w-100" id="navBar">
       <div class="container-lg">
         <a class="navbar-brand" href="index.html">
             <img src="assets/image/logo/Vector.png" alt="logo">
@@ -44,7 +44,7 @@
     </nav>
 
     <!-- single blog details -->
-     <div class="container my-container">
+     <div class="container my-container my-pt">
       <h1 class="py-4 playfair-display text-success text-center text-md-start">
         Heading for the post here
       </h1>
